src/tests/testfiles/function-call-parameter-type-6.txt
Error at 6:3: Number of arguments to function f does not match definition (have 3, need 2)
f(0.0, 'a', 9);
^
